[package]
name = "blockchain-demo"
version = "0.1.0"
authors = ["Jianing Yang <jianingy.yang@gmail.com>"]

[dependencies]
chrono = "0.4"
failure = "0.1.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.7.1"
actix-web = "^0.6"
actix = "0.5"
bytes = "^0.4"
futures = "^0.2"
listenfd = "0.3"